# GAIA-Core

./: .gitignore  CHANGELOG.md  CODEX.md  Cargo.toml  DECISIONS.md  LICENSE  README.md  SHADOWS.md  gaia.bootstrap.yaml  model_profile_registry.yaml  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DRIVE_BACKUP_SETUP.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  provenance.yml  release.yml  reusable-build-and-publish.yml  sbom.yml  sync-to-drive.yml  test.yml
ai/orchestration/: knowledge_integration.py  orch.py
boot/: early_init.c  x86_64.S
boot/include/: gaia_boot_contract.h
boot/linker/: gaia_boot.ld
boot/stage1/: gaia_stage1.c
compositor/src/: main.rs
deploy/: istio-pqc-values.yaml
deploy/local/: docker-compose.infra.yaml
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  DECISIONS.md  GAIA-OVERVIEW-WORK-COMPLETED-001.md  GAIA_DNA.md  GAIA_GROUND.md  GAIA_Gap_Resolution_Matrix_v1.0.md  PREEMPT_RT_NOTES.md  VIRIDITAS-PRAXIS.md
docs/00-index/: README.md  canonical-map.md  document-registry.md
docs/02-architecture/: LINGUISTICS.md  README.md  gaia-core-critical-path_v1.0.md
docs/03-cores/: README.md
docs/08-grimoire/: README.md
docs/09-book-of-shadows/: README.md  law-of-lawful-emergence.md  spectral-crystalline-map.md
docs/adr/: ADR-0001-dual-plane-storage.md  ADR-0002-core-owns-storage.md  ADR-001-hybrid-inference-runtime.md  ADR-002-storage-substrate.md  ADR-003-tpm-attestation.md  ADR-004-earth-system-connectors.md  ADR-INDEX.md  README.md
docs/applied-sciences/: MASTER-CANONICAL-REPORT.md  README.md  RESEARCH-PACK-COVER.md  volume-A-computer-science-ai-systems.md  volume-B-biomedical-sciences-public-health.md  volume-C-engineering-systems-materials.md  volume-D-architecture-urban-design-agriculture-food-systems.md
docs/ci/: GAIA-Desktop-caller-example.yml  GAIA-IoT-caller-example.yml  GAIA-Meta-caller-example.yml  GAIA-Server-caller-example.yml
docs/encyclopedia/: CHANGELOG.md  MASTER-ENCYCLOPEDIA-v4-PROVENANCE.md  README.md
docs/formal-sciences/: MASTER-CANONICAL-REPORT.md  README.md  RESEARCH-PACK-COVER.md  volume-A-logic-language-proof.md  volume-B-mathematics-computation-information.md  volume-C-systems-cybernetics-control-chaos-emergence.md
docs/governance/: GAIA-ATLAS-v1-Scope-Note-Patch-Standard-Template.md  GAIA-Boundary-Compliance-Header-Standard-v1.0.md  GAIA-Gaian-v1-Architecture-Spec-v1.0.md  GAIA-Governance-Index-v1.0.md  GAIA-v1-Product-Boundary-Spec-v1.1.md  GAIA-v1-Scope-Matrix-v1.0.md  GAIA_Governance_Index_v1.1.md  GAIA_Governance_Index_v1.1_Companion_Matrix.md
docs/human-sciences/: README.md  master-canonical-report.md  volume-A-psychology-consciousness-neuropsychology.md  volume-B-anthropology-and-sociology.md  volume-C-economics-and-political-science.md  volume-D-history-and-linguistics.md
docs/natural-sciences/: MASTER-CANONICAL-REPORT.md  README.md  RESEARCH-PACK-COVER.md  volume-A-physics-and-chemistry.md  volume-B-earth-system-sciences.md  volume-C-astronomy-planetary-science-cosmology.md  volume-D-biology-ecology-evolution-microbiology-virology-neuroscience.md
docs/shadows/: GAIA-SHADOW-CONSCIOUSNESS-THEATER-001.md
docs/simulation/: GAIA-SIM-AGAINST-ALL-ODDS-001.md
docs/specs/: GAIA_Dual_Plane_Storage_and_Meta_File_System_Spec_v1.0.md  GAIA_Energy_Optimization_Spec_v1.0.md  GAIA_Environmental_Data_Quality_Spec_v1.0.md  GAIA_Remediation_Execution_Plan_v1.0.md  (+16 more)
examples/: domain_layout_full.toml  launch_layout.toml
gaia_core/: __init__.py  bootstrap.py  models.py
gaia_hypervisor/: LAYER_13_README.md  __init__.py
hal/: Cargo.toml
hal/src/: broker.rs  driver.rs  lib.rs
kernel/: Cargo.toml
kernel/platform/: gaia_platform.c  gaia_platform.h
kernel/sched/: Makefile  build_scx.sh  gaia_sched_ctrl.c  gaia_scx.bpf.c  unload_scx.sh
kernel/src/: caps.rs  ipc.rs  lib.rs  sched.rs  virt.rs
src/python/: README.md  pyproject.toml
src/python/examples/: run_demo.py
src/python/gaia_ai/: README.md  __init__.py  embeddings.py  finetune.py  models.py  profiles.yaml  rag.py  registry.py  robustness.py  router.py  serving.py  vector_store.py
src/python/gaia_ai/config/: model_profiles.example.yaml
src/python/gaia_ai/examples/: __init__.py  demo_pipeline.py
src/python/gaia_ai/robustness/: __init__.py  garak_bridge.py  policy.yaml  probes.py  pyrit_bridge.py  scanner.py
src/python/gaia_ai/serving/: __init__.py  base.py  openai_adapter.py  stub_adapter.py  triton_adapter.py  vllm_adapter.py
src/python/gaia_ai/tests/: __init__.py  test_router.py
src/python/gaia_ai/training/: __init__.py  example_events.py  fine_tune_hooks.py
src/python/gaia_cores/: __init__.py  base.py  bus.py  models.py  propagation.py  registry.py  simple_core.py
src/python/gaia_cores/cores/: __init__.py  aero.py  aqua.py  eta.py  guardian.py  nexus.py  sophia.py  terra.py  vita.py
src/python/tests/: test_ai.py  test_registry.py
src/rust/gaia_desktop/rust_desktop_runtime/: Cargo.toml
src/rust/gaia_desktop/rust_desktop_runtime/src/: compositor.rs  config.rs  hud.rs  hud_bridge.rs  ipc.rs  lib.rs  main.rs  overlay.rs  state.rs  window_manager.rs  workspace.rs
src/vmm/: Cargo.toml
src/vmm/src/: domain.rs  error.rs  layout.rs  lib.rs  main.rs  vcpu.rs
tests/: test_approval_gate.py  test_atlas_ingestor.py  test_attestation.py  test_bootstrap.py  test_bootstrap_dual_plane.py  test_causal_broadcast.py  test_causal_visibility.py  test_codex_integration.py  test_connectors_schemas.py  test_fuse_mount.py  test_guardian_clearance.py  test_identity_root.py  test_index_rebuild.py  test_inference_contracts.py  test_ipc_broadcast.py  test_memory_manager.py  test_namespace_views.py  test_nexus_inference.py  test_object_store_shim.py  test_overlay_runtime.py  test_policy_manifest.py  test_read_your_writes.py  test_risk_classifier.py  test_schemas.py  test_sophia_synthesis.py  test_storage_schemas.py  test_storage_substrate.py  test_vector_clock.py  test_xattrs.py
vmm/: Cargo.toml
vmm/src/: main.rs  snapshot.rs  vcpu.rs
(+387 files in other folders)
