[workspace]
resolver = "2"
members = [
    "kernel",
    "hal",
    "vmm",
    "gaia-types",
    "gaia-sched",
    "gaia-ipc",
    "gaia-caps",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Kyle Steen <xxkylesteenxx@outlook.com>"]

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
