[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaia-core"
version = "0.1.0"
description = "GAIA-Core — zero-dependency contract and schema layer for the GAIA system"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
server = [
    "nats-py>=2.6",
    "minio>=7.2",
    "etcd3>=0.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/xxkylesteenxx/GAIA-Core"

[tool.hatch.build.targets.wheel]
packages = ["gaia_core"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
