[package]
name = "gaia-kernel"
version = "1.0.0"
edition = "2021"
description = "GAIA L1 Kernel — Rust-first scheduler, IPC, capabilities, and virt hooks"
license = "GPL-2.0"

[lib]
name = "gaia_kernel"
crate-type = ["staticlib"]

[dependencies]
# Scheduling
gaia-sched = { path = "../gaia-sched" }
# IPC and capabilities
gaia-ipc = { path = "../gaia-ipc" }
gaia-caps = { path = "../gaia-caps" }
# Shared types
gaia-types = { path = "../gaia-types" }

[features]
default = ["sched", "ipc", "caps"]
sched = []
ipc = []
caps = []
virt = []

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[profile.dev]
opt-level = 1
panic = "abort"
