[package]
name    = "gaia-vmm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
toml       = "0.8"
log        = "0.4"

# Uncomment when integrating with Linux KVM:
# kvm-ioctls   = "0.16"
# kvm-bindings = "0.7"
# vm-memory    = "0.14"

# Uncomment for async runtime:
# tokio = { version = "1", features = ["full"] }
